--- a/biostatistics.html
+++ b/biostatistics.html
@@ -105,7 +105,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='http://foghorntherapeutics.applytojob.com/apply/f8yWkDWk4s/Head-Of-Biostatistics'>Head of Biostatistics - Foghorn Therapeutics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://foghorntherapeutics.applytojob.com/apply/f8yWkDWk4s/Head-Of-Biostatistics'>Head of Biostatistics - Foghorn Therapeutics - Career Page</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -113,7 +113,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics-mechelen-be'>
+<h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics-mechelen-be'>
       Team Leader Biostatistics -Mechelen, BE - Galapagos
     </a></h5> 
 <p><span class="badge badge-light">Mechelen, Belgium  France</span></p>
@@ -127,7 +127,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Los Angeles Los Angeles, CA, USA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31421'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31421'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -144,12 +144,12 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://engineering.oregonstate.edu/bioengineering'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineering.oregonstate.edu/bioengineering'>
     Bioengineering Graduate Programs | College of Engineering | Oregon State University  </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-10</p>
 <hr/>
-<h5><a href='https://tfscareers.workable.com/j/42D2A18D41'>TFS - Jobs: Biostatistician - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/42D2A18D41'>TFS - Jobs: Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -161,7 +161,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/13CE70BC84'>TFS - Jobs: Senior Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -211,11 +211,11 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.mdanderson.org/search/jobdetails/research-assistant-i-radiation-oncology-biostatistics/b0204d6a-2a19-41e2-b325-e5311c691166?s_cid=ssTW'>Research Assistant I, Radiation Oncology Biostatistics | Houston, TX | MD Anderson</a></h5> 
+<h5><a href='https://jobs.mdanderson.org/search/jobdetails/research-assistant-i-radiation-oncology-biostatistics/b0204d6a-2a19-41e2-b325-e5311c691166?s_cid=ssTW'>Research Assistant I, Radiation Oncology Biostatistics | Houston, TX | MD Anderson</a></h5> 
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
-<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/research-assistant-i-radiation-oncology-biostatistics-22538'>Research Assistant I, Radiation Oncology Biostatistics - MD Anderson Cancer Center Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/research-assistant-i-radiation-oncology-biostatistics-22538'>Research Assistant I, Radiation Oncology Biostatistics - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -283,7 +283,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -295,7 +295,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Wokingham, United Kingdom</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/oLrAafwG'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -401,7 +401,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-27</p>
 <hr/>
-<h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Pennsylvania---Upper-Providence/Statistics-Leader---Advanced-Biostatistics_207635'>Statistics Leader - Advanced Biostatistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Pennsylvania---Upper-Providence/Statistics-Leader---Advanced-Biostatistics_207635'>Statistics Leader - Advanced Biostatistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 11, 2019 ... The Advanced Biostatistics & Data Analytics (ABDA) Centre of Excellence is part 
 of the Biostatistics department in the R&D Development organisation.</p>
@@ -473,7 +473,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/C2B2F87DF4'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Remote - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/C2B2F87DF4'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-05</p>
 <hr/>
