--- a/statistics.html
+++ b/statistics.html
@@ -93,7 +93,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
 	MBA Student Data &amp; Statistics - Recruiting - Harvard Business School
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -123,7 +123,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statmodeling.stat.columbia.edu/2019/10/25/givewell-is-hiring-wants-someone-to-help-figure-out-how-to-give-well-bayesian-methods-may-be-relevant-here/'>Givewell is hiring; wants someone to help figure out how to give well; Bayesian methods may be relevant here ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
+<h5><a href='https://statmodeling.stat.columbia.edu/2019/10/25/givewell-is-hiring-wants-someone-to-help-figure-out-how-to-give-well-bayesian-methods-may-be-relevant-here/'>Givewell is hiring; wants someone to help figure out how to give well; Bayesian methods may be relevant here ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -137,7 +137,7 @@
 reporting needs by analyzing the data and presenting the findings to the 
 organization?...</p>
 <hr/>
-<h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/remote-principal-sr-principal-biostatistician-durham-nc-2710/83975'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/remote-principal-sr-principal-biostatistician-durham-nc-2710/83975'>
 Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori Steiner
 </a></h5> 
 <p><span class="badge badge-light">Durham, NC</span></p>
@@ -183,11 +183,11 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='http://studygroupuk.applytojob.com/apply/s76rdno9aa/Business-Management-Economics-Or-Statistics-Tutor'>Business & Management, Economics or Statistics Tutor - Study Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://studygroupuk.applytojob.com/apply/s76rdno9aa/Business-Management-Economics-Or-Statistics-Tutor'>Business & Management, Economics or Statistics Tutor - Study Group - Career Page</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4492849002'>Job Application for Principal Statistical Programmer at Myovant Sciences</a></h5> 
+<h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4492849002'>Job Application for Principal Statistical Programmer at Myovant Sciences</a></h5> 
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -264,7 +264,7 @@ generate?...</p>
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999697455774-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999697455774-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -280,7 +280,7 @@ generate?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/jobs/1152500'>Statistical Programmer - Statistics & Data Corporation (SDC)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/jobs/1152500'>Statistical Programmer - Statistics & Data Corporation (SDC)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Produce statistical analyses, including generating analysis datasets, tables, 
 listings, and figures for clinical trials. Support Data Management in data set?...</p>
@@ -368,7 +368,7 @@ created School of Data Science, and other departments and schools. Faculty?...</
 <p><span class="badge badge-light">Waltham, Massachusetts United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://externaltalent-mskcc.icims.com/jobs/35964/principal-biotatistician---department-of-epidemiology-and-biostatistics/job'>Principal Biostatistician - Department of Epidemiology and ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://externaltalent-mskcc.icims.com/jobs/35964/principal-biotatistician---department-of-epidemiology-and-biostatistics/job'>Principal Biostatistician - Department of Epidemiology and ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>12 hours ago ... Experience of collaborative research (including creating and maintaining data 
 files, writing application programs within a statistical software, analyzing data,?...</p>
@@ -379,7 +379,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Mechelen, Belgium</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -477,7 +477,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on:: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/040ECF198D'>Statistics & Data Corporation (SDC) - Jobs: Statistical Programmer - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/040ECF198D'>Statistics & Data Corporation (SDC) - Jobs: Statistical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
