--- a/internship.html
+++ b/internship.html
@@ -41,8 +41,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/3dhubs/8eb2e0db-9a5c-4f95-a262-778e361b0877'>3D Hubs - 3D Printing Order Fulfilment Intern</a></h5> 
+<h5><a href='https://colorfy.join.com/jobs/473114-project-management-intern-f-m'>Job @ colorfy (Berlin): Project Management Intern ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698621592-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/3dhubs/8eb2e0db-9a5c-4f95-a262-778e361b0877'>3D Hubs - 3D Printing Order Fulfilment Intern</a></h5> 
+<p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://www.greatinsurancejobs.com/job/6409706/geospatial-intern-big-/?TrackID=97736'>Geospatial Intern (BIG) job with Travelers Insurance | 6409706</a></h5> 
@@ -119,7 +127,7 @@
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InterNations/743999680767696-business-solutions-mandatory-internship'>InterNations Business Solutions Mandatory Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InterNations/743999680767696-business-solutions-mandatory-internship'>InterNations Business Solutions Mandatory Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -131,7 +139,7 @@
 <p><span class="badge badge-light">London, United Kingdom  Paris</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/6cb21a40-498d-481f-920b-203d72f552f7'>Criteo - Internship - Strategic Project Office</a></h5> 
+<h5><a href='https://jobs.lever.co/criteo/6cb21a40-498d-481f-920b-203d72f552f7'>Criteo - Internship - Strategic Project Office</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -143,7 +151,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careercenter.democraticgain.org/job/press-intern/51494166/'>Press Intern Job Opening in Remote, Other / Non-US - Democratic GAIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercenter.democraticgain.org/job/press-intern/51494166/'>Press Intern Job Opening in Remote, Other / Non-US - Democratic GAIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -157,7 +165,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://sportsrecruitsllc.applytojob.com/apply/lyX1OR2loi/Software-Developer-Summer-Internship'>Software Developer Summer Internship - SportsRecruits - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://sportsrecruitsllc.applytojob.com/apply/lyX1OR2loi/Software-Developer-Summer-Internship'>Software Developer Summer Internship - SportsRecruits - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -217,7 +225,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lockton.referrals.selectminds.com/jobs/analytics-intern-1838'>Analytics Intern - Lockton Careers</a></h5> 
+<h5><a href='https://lockton.referrals.selectminds.com/jobs/analytics-intern-1838'>Analytics Intern - Lockton Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -261,7 +269,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://itstimetexas.applytojob.com/apply/Cp9IE8aIJK/Spring-2020-Internship-NonprofitHealth-Wellness'>Spring 2020 Internship: Nonprofit/Health & Wellness - IT'S TIME TEXAS - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itstimetexas.applytojob.com/apply/Cp9IE8aIJK/Spring-2020-Internship-NonprofitHealth-Wellness'>Spring 2020 Internship: Nonprofit/Health & Wellness - IT'S TIME TEXAS - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -299,7 +307,7 @@
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698578794-software-developer-intern'>Broadsign Software Developer Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698578794-software-developer-intern'>Broadsign Software Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -355,7 +363,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576198-internship-controlling-fr'>Bosch Group Internship Controlling FR | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576198-internship-controlling-fr'>Bosch Group Internship Controlling FR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -367,11 +375,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576845-internship-sales-operations-fr'>Bosch Group Internship Sales & Operations FR | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576845-internship-sales-operations-fr'>Bosch Group Internship Sales & Operations FR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698575542-internship-quality-coordination-support-en'>Bosch Group Internship Quality Coordination Support EN | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698575542-internship-quality-coordination-support-en'>Bosch Group Internship Quality Coordination Support EN | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -403,7 +411,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698574763-internship-assistant-trade-marketing-channel-marketing-communication-fr'>Bosch Group Internship Assistant Trade Marketing, Channel Marketing & Communication FR | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698574763-internship-assistant-trade-marketing-channel-marketing-communication-fr'>Bosch Group Internship Assistant Trade Marketing, Channel Marketing & Communication FR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -435,7 +443,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698570491-junior-growth-marketing-manager-internship-apprenticeship-'>Deezer Junior Growth Marketing Manager (Internship/Apprenticeship) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698570491-junior-growth-marketing-manager-internship-apprenticeship-'>Deezer Junior Growth Marketing Manager (Internship/Apprenticeship) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -454,14 +462,6 @@
 </a></h5> 
 <p><span class="badge badge-light">Manchester</span></p>
 <p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://dlapiperus.referrals.selectminds.com/jobs/intern-2523'>Intern - DLA Piper Careers</a></h5> 
-<p><span class="badge badge-light">Tampa, Florida</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/quotient/job/o3FmbfwZ'>Quotient Technology Inc. Careers - Client Success Executive (Internship)</a></h5> 
-<p><span class="badge badge-light">London, United Kingdom  France</span></p>
-<p>Posted on: 2019-10-31</p>
 <hr/>
 
 
